test/scc_test/decl/semantic-errors/045.a
045.t:1:22: error: 'inline' specifier allowed on function declarations only